--- a/index.html
+++ b/index.html
@@ -10,6 +10,36 @@
     <title>Countdown</title>
   </head>
   <body>
+
+    <section class="coming-soon">
+      <div>
+        <h2>Coming Soon</h2>
+        <div class="countdown">
+          <div class="container-day">
+            <h3 class="day">Time</h3>
+            <h3>Day</h3>
+            </div>
+          <div class="container-hour">
+            <h3 class="hour">Time</h3>
+            <h3>Hour</h3>
+          </div>
+          <div class="container-minute">
+            <h3 class="minute">Time</h3>
+            <h3>Minute</h3>
+          </div>
+          <div class="container-second">
+            <h3 class="second">Time</h3>
+            <h3>Second</h3>
+          </div>
+          </div>
+        </div>
+      </div>
+      <img src="./clock-svgrepo-com.svg" alt="clock" class="clock">
+    </div>
+   
+
+
+
     <script src="./app.js"></script>
   </body>
 </html>
